[package]
name = "solana-prac"
version = "0.1.0"
edition = "2021"


[lib]
name = "pkg"
path = "./src/lib.rs"


[dependencies]
anyhow = "1.0.98"
solana-client = { version = "2.2.2", default-features = false }
solana-sdk = { version = "2.2,2" }
tokio = "1.45.1"
serde = { version = "1", features = ["derive"] }
axum = "0.8.4"
chrono = "0.4.41"
serde_json = "1.0.140"


